# roboticsLLLC

./: README.md  ejemplo_tf
ejercicio_mapas/: CMakeLists.txt
ejercicio_mapas/fsm/: StateMachinePr4.bica  StateMachinePr4.cpp  StateMachinePr4.h
ejercicio_mapas/include/ejercicio_mapas/: coord_reader.hpp  movement.hpp  movement2.hpp
ejercicio_mapas/launcher/: coordinates.launch  mapas_launcher.launch
ejercicio_mapas/map/: map.pgm
ejercicio_mapas/src/: nodo_2.cpp  nodo_bedroom.cpp  nodo_emptyroom.cpp  nodo_gym.cpp  nodo_kitchen.cpp  nodo_principal.cpp
ejercicio_mapas/src/ejercicio_mapas/: coord_reader.cpp  movement.cpp  movement2.cpp
ejercicio_mapas_BICA/: CMakeLists.txt  package.xml  rvizConf.rviz
ejercicio_mapas_BICA/config/: coord_params.yaml
ejercicio_mapas_BICA/fsm/: StateMachinePr4.h
ejercicio_mapas_BICA/include/ejercicio_mapas/: bedroom.hpp  empty_room.hpp  gym.hpp  kitchen.hpp  part2_state_machine.hpp
ejercicio_mapas_BICA/launcher/: mapas_launcher.launch  part2.launch
ejercicio_mapas_BICA/src/: nodo_2.cpp  nodo_bedroom.cpp  nodo_emptyroom.cpp  nodo_gym.cpp  nodo_kitchen.cpp  nodo_part1.cpp  nodo_part2.cpp  nodo_principal.cpp
ejercicio_mapas_BICA/src/ejercicio_mapas/: bedroom.cpp  coord_reader.cpp  empty_room.cpp  gym.cpp  kitchen.cpp  movement.cpp  movement2.cpp  part2_state_machine.cpp
planB/practica3/: CMakeLists.txt  package.xml
planB/practica3/include/practica3/: Detector.hpp  LaserDetector.hpp  Operator.hpp  Turn.hpp
planB/practica3/src/: nodo_detector.cpp  nodo_laser.cpp  nodo_sm.cpp  nodo_turn.cpp
planB/practica3/src/practica3/: Detector.cpp  LaserDetector.cpp  Operator.cpp
practica1/: CMakeLists.txt  package.xml
practica1/launch/: pubsub.launch
practica1/src/: nodo_p1.cpp  nodo_pub_vel.cpp  nodo_sub_bumper.cpp  package.xml
practica2/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
practica2/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
practica2/catkin_generated/installspace/: practica2.pc  practica2Config.cmake
practica2/include/practica2/: DetectDodge.h  Pr2Class.h
practica2/src/: nodo_p2.cpp
practica2/src/practica2/: DetectDodge.cpp  Markers.cpp  Pr2Class.cpp
practica3/: CMakeLists.txt  package.xml
practica3/include/practica3/: ObjectDetector.hpp  ball_detector.h  ball_operator.hpp  blueGoal_detector.hpp  blueGoal_operator.hpp  yellowGoal_detector.hpp  yellowGoal_operator.hpp
practica3/src/: ejemplo_tf.cpp  nodo_ball.cpp  nodo_blue.cpp  nodo_object.cpp  nodo_p3.cpp  nodo_sm.cpp  nodo_turn.cpp  nodo_yellow.cpp  yellow_detector.cpp
practica3/src/practica3/: ObjectDetector.cpp  Turn.cpp  ball_detector.cpp  ball_operator.cpp  blueGoal_detector.cpp  blueGoal_operator.cpp  yellowGoal_detector.cpp  yellowGoal_operator.cpp
practica3_ME_bien_con_rqt/: CMakeLists.txt  package.xml
practica3_ME_bien_con_rqt/fsm/: StateMachinePr3.cpp  StateMachinePr3.h
practica3_ME_bien_con_rqt/include/practica3/: Ball.hpp  BlueGoal.hpp  StateMachine.hpp  YellowGoal.hpp  nodo_ball.hpp
practica3_ME_bien_con_rqt/launcher/: practica3.launch
practica3_ME_bien_con_rqt/src/: nodo_ball.cpp  nodo_blue.cpp  nodo_p3.cpp  nodo_sm.cpp  nodo_turn.cpp  nodo_yellow.cpp
practica3_ME_bien_con_rqt/src/practica3/: Ball.cpp  BlueGoal.cpp  StateMachine.cpp  Turn.cpp  YellowGoal.cpp  yellowGoal_detector.cpp
practica3_improved/: CMakeLists.txt  package.xml  rvizConf.rviz
practica3_improved/fsm/: StateMachinePr3.bica  StateMachinePr3.cpp  StateMachinePr3.h
practica3_improved/include/practica3_improved/: Ball.hpp  BlueGoal.hpp  ColorDetector.hpp  ObjectDetector.hpp  StateMachine.hpp  Turn.hpp  YellowGoal.hpp
practica3_improved/launcher/: practica3.launch
practica3_improved/src/: nodo_ball.cpp  nodo_blue.cpp  nodo_sm.cpp  nodo_turn.cpp  nodo_yellow.cpp
practica3_improved/src/practica3_improved/: Ball.cpp  BlueGoal.cpp  ColorDetector.cpp  ObjectDetector.cpp  StateMachine.cpp  Turn.cpp  YellowGoal.cpp  ball_detector.cpp  blueGoal_detector.cpp  yellowGoal_detector.cpp
proyecto_final/: CMakeLists.txt  object_BT.xml  package.xml  proyecto_final_BT.xml  room_BT.xml  rvizConf.rviz
proyecto_final/include/proyecto_final/: ApproachObject.hpp  ApproachRoom.hpp  TurnTo.hpp  coord_reader.hpp  coordsFile.hpp  dn_recognizing.hpp  inFront.hpp  inRoom.hpp  look4object.hpp  movement.hpp  setTF.hpp  turnToTf.hpp
proyecto_final/launcher/: simulation.launch
proyecto_final/map/: map.pgm  map.yaml  map_lab.pgm  map_lab.yaml
proyecto_final/src/: nodo_approachObject.cpp  nodo_behavior_tree.cpp  nodo_go2room.cpp  nodo_reconocimiento.cpp
proyecto_final/src/proyecto_final/: ApproachObject.cpp  ApproachRoom.cpp  TurnTo.cpp  coord_reader.cpp  dn_recognizing.cpp  inFront.cpp  inRoom.cpp  look4object.cpp  movement.cpp  setTF.cpp  turnToTf.cpp
