<?xml version="1.0"?>
<package format="2">
  <name>practica2</name>
  <version>0.1.0</version>
  <description>Package for practica2</description>

  <maintainer email="none@gmail.com">RoboticsLLLC</maintainer>

  <license>Apache 2</license>
  <url type="website">https://github.com/camilo-0715/roboticsLLLC.git</url>

  <author email="none@gmail.com">RoboticsLLLC</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>kobuki_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
  </export>
</package>

